--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header></header>
     <main>
-        <h2>Talha Nisar</h2>
+        <h2>Talha Nisar.</h2>
     </main>
     <footer></footer>
 </body>
