--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header></header>
     <main>
         <h2>Talha Nisar.</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla, sint?</p>
+        <p>Emergncy paragraph</p>
     </main>
     <footer></footer>
 </body>
